Comentário importante sobre arrow function e escopo

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     return 4-2;
                 },
                 //arrow function
+                //Atenção ao comportamento nas arrow functions por causa do escopo ao acessar o data
                 multiplicar: () => {
                     return 4*2;
                 },
